# agos

./: .gitignore  CONTEXT.md  LICENSE  MERGE_NOTES.md  README.md  pyproject.toml
.agos/: agos.yaml
.basetemp/test_append_chains_prev_hash0/: ledger.jsonl
.basetemp/test_append_first_record_has_e0/: ledger.jsonl
.basetemp/test_read_all_returns_in_order0/: ledger.jsonl
.basetemp/test_rewrite_all_and_recompute0/: ledger.jsonl
.basetemp/test_task_round_trip0/: task.yaml
.basetemp/test_task_yaml_has_expected_fi0/: task.yaml
.basetemp/test_verify_chain_detects_reco0/: ledger.jsonl
.basetemp/test_verify_chain_detects_tamp0/: ledger.jsonl
.basetemp/test_verify_chain_passes_on_cl0/: ledger.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  real-agent-smoke.yml  release.yml
docs/: execution-modes.md  provenance.md  release-install.md  security-gates.md  state-security.md
docs/adr/: 0001-ledger-authoritative-task-state.md
scripts/: verify_release.py
src/agos/: __init__.py
tests/: conftest.py  test_integration_config.py  test_smoke.py
tests/adapters/: test_claude_code_worker.py  test_command_worker.py  test_fake_reviewer.py  test_llm_cli_reviewer.py  test_local_cli_executor.py  test_manual_reviewer.py  test_multica.py  test_noninteractive.py  test_planner_cli.py  test_worker_adapters.py  test_worker_health.py
tests/ci/: test_autonomous_loop_ci_policy.py  test_merge_gate_smoke.py  test_release_policy.py  test_trusted_merge_gate_workflow.py
tests/cli/: test_anchor.py  test_candidate.py  test_candidate_merge.py  test_checkpoint.py  test_ci.py  test_closeout.py  test_config.py  test_dashboard.py  test_doctor.py  test_execute_plan_runtime.py  test_executor_registry.py  test_init.py  test_merge_gate.py  test_orchestration.py  test_prepare_merge_gate.py  test_resolve.py  test_review.py  test_reviewer_registry.py  test_run_auto.py  test_start.py  test_status_command.py  test_task.py  test_task_execution_registry.py  test_worker_doctor.py  test_worker_registry.py
tests/core/: test_arbiters.py  test_backend_parity.py  test_command.py  test_config.py  test_evidence.py  test_execution.py  test_execution_orchestration.py  test_execution_pipeline.py  test_execution_planner.py  test_execution_runtime.py  test_execution_runtime_recovery.py  test_execution_service.py  test_execution_store.py  test_execution_worker.py  test_execution_workspace.py  test_executor_seam.py  test_external_backend_http.py  test_gate.py  test_graph_runtime.py  test_graph_runtime_lifecycle.py  test_json_text.py  test_ledger.py  test_merge_arbiter.py  test_merge_gate.py  test_merge_gate_provenance.py  test_native_backend.py  test_orchestration_models.py  test_orchestration_node_backends.py  test_orchestration_registry.py  test_orchestrator_backend_lifecycle.py  test_parallel_review_orchestrator.py  test_provenance.py  test_repo.py  test_review.py  test_review_adapter.py  test_review_orchestration.py  test_review_service.py  test_review_store.py  test_status.py  test_task.py  (+4 more)
tests/integration/: test_external_backend_server.py  test_langgraph_backend.py  test_multi_agent_runtime.py  test_offline_task_execution.py  test_planner_cli_opt_in.py  test_reviewer_cli_opt_in.py  test_round_trip.py  test_worker_adapters_opt_in.py
(+161 files in other folders)
