[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agos"
version = "0.1.0"
description = "Executor-agnostic governance layer for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
agos = "agos.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agos.hooks.templates" = ["*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
    "integration: opt-in end-to-end tests (set AGOS_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["src/agos"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
