[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agos"
version = "0.1.0"
description = "Executor-agnostic governance layer for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "AGOS project"},
]
keywords = ["ai-agents", "governance", "cli", "ci", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
langgraph = [
    "langgraph",
]

[project.scripts]
agos = "agos.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agos.hooks.templates" = ["*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
cache_dir = ".pytest_cache_active"
markers = [
    "integration: opt-in end-to-end tests (set AGOS_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["src/agos"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
